version 4.41t metodo contar partidas